--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "@babel/core": "^7.9.0",
     "@babel/polyfill": "^7.8.7",
     "@babel/preset-env": "^7.9.5",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.2",
+    "eslint": "^6.8.0",
+    "eslint-config": "^0.3.0",
+    "eslint-loader": "^4.0.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-wc": "^1.2.0",
     "file-loader": "^6.0.0",
     "html-loader": "^1.1.0",
     "html-webpack-plugin": "^4.2.0",
@@ -27,6 +33,7 @@
     "node-sass": "^4.13.1",
     "pug": "^2.0.4",
     "pug-loader": "^2.4.0",
+    "raw-loader": "^4.0.1",
     "sass-loader": "^8.0.2",
     "terser-webpack-plugin": "^2.3.5",
     "url-loader": "^4.1.0",
